revert pyproject and setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,37 @@
 [build-system]
-requires = [
-    "setuptools>=61.0",
-    "wheel"
-]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "calibrated_explanations"
+version = "0.0.9"
+authors = [
+  { name="Helena Löfström", email="helena.lofstrom@ju.se" },
+  { name="Tuwe Löfström", email="tuwe.lofstrom@ju.se" },
+]
+description = "Extract calibrated explanations from machine learning models."
+readme = "README.md"
+requires-python = ">=3.7"
+dependencies = [
+  'crepes',
+  'ipython',
+  'lime',
+  'matplotlib',
+  'numpy',
+  'pandas',
+  'scikit-learn',
+  'shap',
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
+[project.urls]
+"Homepage"    = "https://github.com/Moffran/calibrated_explanations"
+"Bug Tracker" = "https://github.com/Moffran/calibrated_explanations/issues"
+
+[tool.setuptools.packages.find]
+where = ["src"]
