--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,6 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install calibrated-explanations
+        pip install pytest
         pip install pylint
     - name: Analysing the code with pylint
       run: |
