--- a/docs/requirements-doc.txt
+++ b/docs/requirements-doc.txt
@@ -1,10 +1,14 @@
-crepes
+crepes >= 0.6.0
+ipython
+lime >= 0.2.0.1
+matplotlib >= 3.4
 myst_parser
 nbsphinx
-numpy
+numpy >= 1.20
 numpydoc
-pandas
+pandas >= 1.1.5
 pydata_sphinx_theme
-scikit-learn
+scikit-learn >= 0.24.1
+shap >= 0.41.0
 sphinx
 sphinx_rtd_theme
