--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,18 +3,31 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: ${{ matrix.python-version }}
           cache: 'pip' # caching pip dependencies
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}-${{ matrix.python-version }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
           pip install calibrated-explanations
-          pip install pytest
-      - name: Run tests
-        run: pytest
+          pip install pytest pytest-cov pylint
+      - name: Lint with pylint
+        run: |
+          pylint **/*.py
+      - name: Run tests with coverage
+        run: pytest --cov=./
