--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,8 @@ jobs:
           pip install -r requirements.txt
           pip install calibrated-explanations
           pip install pytest pytest-cov pylint
-      - name: Lint with pylint
-        run: |
-          pylint **/*.py
+      #- name: Lint with pylint
+       # run: |
+        #  pylint **/*.py
       - name: Run tests with coverage
         run: pytest --cov=./
