--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test
+uname: test
 on: [push]
 jobs:
   test:
@@ -25,7 +25,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install calibrated-explanations
-          pip install pytest pytest-cov pylint xgboost shap
+          pip install pytest pytest-cov pylint xgboost shap setuptools
       - name: Lint with pylint
         run: |
           pylint $(git ls-files '*.py')
