--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           pylint $(git ls-files '*.py')
       - name: Run tests with coverage
-        run: pytest --cov=./
+        run: pytest --cov=src/calibrated_explanations
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
