--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,27 +32,28 @@ jobs:
           pip install calibrated-explanations
           pip install pytest pytest-cov pylint xgboost shap setuptools
 
-      - name: Download lint outcome artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: lint-outcome
-          path: .
+      # - name: Download lint outcome artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: lint-outcome
+      #     path: .
 
-      - name: Read lint outcome
-        id: read_lint_outcome
-        run: echo "lint_outcome=$(cat lint_outcome.txt)" >> $GITHUB_ENV
+      # - name: Read lint outcome
+      #   id: read_lint_outcome
+      #   run: echo "lint_outcome=$(cat lint_outcome.txt)" >> $GITHUB_ENV
 
-      - name: Run tests with coverage
-        if: ${{ env.lint_outcome == 'success' && !startsWith(github.event.head_commit.message, 'style:') }}
-        id: run_tests
-        run: pytest --cov=src/calibrated_explanations
+      # - name: Run tests with coverage
+      #   if: ${{ env.lint_outcome == 'success' && !startsWith(github.event.head_commit.message, 'style:') }}
+      #   id: run_tests
+      #   run: pytest --cov=src/calibrated_explanations
 
-      - name: Upload coverage reports to Codecov      
-        uses: codecov/codecov-action@v4.5.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+      # - name: Upload coverage reports to Codecov      
+      #   uses: codecov/codecov-action@v4.5.0
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Lint with pylint
+        id: lint
         run: |
           pylint $(git ls-files '*.py')
         continue-on-error: true
