--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,18 +32,18 @@ jobs:
           pip install calibrated-explanations
           pip install pytest pytest-cov pylint xgboost shap setuptools
 
-      - name: Download lint outcome artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: lint-outcome
-          path: .
+      # - name: Download lint outcome artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: lint-outcome
+      #     path: .
 
-      - name: Read lint outcome
-        id: read_lint_outcome
-        run: echo "lint_outcome=$(cat lint_outcome.txt)" >> $GITHUB_ENV
+      # - name: Read lint outcome
+      #   id: read_lint_outcome
+      #   run: echo "lint_outcome=$(cat lint_outcome.txt)" >> $GITHUB_ENV
 
       - name: Run tests with coverage
-        if: ${{ env.lint_outcome == 'success' && !startsWith(github.event.head_commit.message, 'style:') }}
+        # if: ${{ env.lint_outcome == 'success' && !startsWith(github.event.head_commit.message, 'style:') }}
         id: run_tests
         run: pytest --cov=src/calibrated_explanations
 
@@ -56,14 +56,14 @@ jobs:
         id: lint
         run: |
           pylint $(git ls-files '*.py')
-        continue-on-error: true
+      #   continue-on-error: true
 
-      - name: Save lint outcome
-        if: ${{ always() }}
-        run: echo ${{ steps.lint.outcome }} > lint_outcome.txt
-      - name: Upload lint outcome artifact
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: lint-outcome
-          path: lint_outcome.txt
+      # - name: Save lint outcome
+      #   if: ${{ always() }}
+      #   run: echo ${{ steps.lint.outcome }} > lint_outcome.txt
+      # - name: Upload lint outcome artifact
+      #   if: ${{ always() }}
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: lint-outcome
+      #     path: lint_outcome.txt
