--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r docs/requirements-docs.txt
+        pip install -r docs/requirements-doc.txt
         pip install sphinx sphinx-autobuild
 
     - name: Build documentation
