--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,5 @@
 name: test
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-      
+on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
