--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,9 @@ jobs:
         id: run_tests
         run: pytest --cov=src/calibrated_explanations
 
+      - name: Run doctests
+        run: python src/calibrated_explanations/utils/helper.py
+
       - name: Upload coverage reports to Codecov      
         uses: codecov/codecov-action@v4.6.0
         with:
