--- a/src/calibrated_explanations/utils/configurations/plot_config.ini
+++ b/src/calibrated_explanations/utils/configurations/plot_config.ini
@@ -21,7 +21,7 @@ dpi = 300
 save_dpi = 300
 facecolor = white
 axes_facecolor = white
-width = 10
+width = 10  # Add width parameter with default value
 
 [colors]
 background = #f8f9fa
