feat: add regression and alpha parameters and improve code quality

--- a/src/calibrated_explanations/utils/configurations/plot_config.ini
+++ b/src/calibrated_explanations/utils/configurations/plot_config.ini
@@ -27,6 +27,8 @@ width = 10  # Add width parameter with default value
 background = #f8f9fa
 text = #666666
 grid = #cccccc
+regression = red
 positive = red
 negative = blue
 uncertainty = lightgrey
+alpha = 0.2
