--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,20 +30,9 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install calibrated-explanations
-          pip install pytest pytest-cov pylint xgboost lime shap setuptools
-
-      # - name: Download lint outcome artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: lint-outcome
-      #     path: .
-
-      # - name: Read lint outcome
-      #   id: read_lint_outcome
-      #   run: echo "lint_outcome=$(cat lint_outcome.txt)" >> $GITHUB_ENV
+          pip install pytest pytest-cov pylint xgboost lime shap setuptools psutil
 
       - name: Run tests with coverage
-        # if: ${{ env.lint_outcome == 'success' && !startsWith(github.event.head_commit.message, 'style:') }}
         id: run_tests
         run: pytest --cov=src/calibrated_explanations
 
@@ -59,14 +48,27 @@ jobs:
         id: lint
         run: |
           pylint $(git ls-files '*.py')
-      #   continue-on-error: true
 
-      # - name: Save lint outcome
-      #   if: ${{ always() }}
-      #   run: echo ${{ steps.lint.outcome }} > lint_outcome.txt
-      # - name: Upload lint outcome artifact
-      #   if: ${{ always() }}
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: lint-outcome
-      #     path: lint_outcome.txt
+  perf-guard:
+    runs-on: ubuntu-latest
+    needs: test
+    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/online' }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install . psutil
+
+      - name: Run performance regression check
+        run: |
+          python scripts/check_perf_regression.py \
+            --baseline benchmarks/baseline_20250816.json \
+            --thresholds benchmarks/perf_thresholds.json --collect
