--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,10 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["S", "B"]
+"tests/*" = ["S", "B", "I001"]
+"src/calibrated_explanations/core/calibrated_explainer.py" = ["I001"]
+"src/calibrated_explanations/core/online_explainer.py" = ["I001"]
+"src/calibrated_explanations/core/prediction_helpers.py" = ["I001"]
 
 [tool.ruff.format]
 quote-style = "double"
@@ -89,7 +92,11 @@ check_untyped_defs = false
 
 # Phase 1B typing: keep permissive defaults; enable stricter checks per-module below.
 [[tool.mypy.overrides]]
-module = ["calibrated_explanations.core.exceptions", "calibrated_explanations.core.validation"]
+module = [
+  "calibrated_explanations.core.exceptions",
+  "calibrated_explanations.core.validation",
+  "calibrated_explanations.api.params",
+]
 disallow_untyped_defs = true
 warn_return_any = true
 no_implicit_optional = true
