--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,9 +45,9 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
   perf-guard:
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: test
-    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/online' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
