feat: phase 2 and 2S partially done - Introduce configuration primitives and optional extras for calibrated explanations
- Added `ExplainerConfig` and `ExplainerBuilder` for simplified explainer construction.
- Implemented optional dependency groups in `pyproject.toml` for visualization (`viz`) and LIME integration (`lime`).
- Updated plotting functions to lazily import matplotlib and raise informative errors if not installed.
- Enhanced `WrapCalibratedExplainer` to support user-supplied preprocessors with controlled wiring for fitting and transforming data.
- Created internal domain models for explanations, including `Explanation` and `FeatureRule`.
- Added tests for configuration builder, preprocessing wiring, and plotting functionality.
- Updated documentation to reflect new features and installation instructions for optional extras.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,15 @@ classifiers = [
 "Bug Tracker" = "https://github.com/Moffran/calibrated_explanations/issues"
 "Repository" = "https://github.com/Moffran/calibrated_explanations"
 
+[project.optional-dependencies]
+# Phase 2S: Optional extras (kept additive; core deps unchanged for compatibility)
+viz = [
+  "matplotlib",
+]
+lime = [
+  "lime",
+]
+
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 
@@ -58,7 +67,6 @@ select = [
   "F",  # pyflakes
   "I",  # isort
   "B",  # bugbear
-  "UP", # pyupgrade
   "C4", # comprehensions
   "SIM",# simplify
   "NPY",# NumPy
@@ -67,7 +75,6 @@ select = [
 ignore = [
   "E501",    # line length (managed by formatter)
   "S101",    # use of assert (allowed in tests)
-  "UP007",   # allow Optional[...] for py38 compatibility
 ]
 
 [tool.ruff.lint.per-file-ignores]
