--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,9 +43,29 @@ viz = [
 lime = [
   "lime",
 ]
+notebooks = [
+  "ipython",
+  "jupyter",
+  "nbconvert",
+  "matplotlib",
+]
+dev = [
+  "pytest",
+  "pytest-cov",
+  "ruff",
+  "mypy",
+  "jsonschema",
+]
+eval = [
+  "shap",
+  "seaborn",
+]
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
+markers = [
+  "viz: tests that require visualization extras (matplotlib)",
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
