--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,33 +1,40 @@
-name: Build and Deploy Docs
-on: [push]
+name: docs
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    if: ${{startsWith(github.event.head_commit.message, 'docs:') && startsWith(github.event.head_commit.message, 'Docs:')}}
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v5
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.8'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r docs/requirements-doc.txt
-        pip install sphinx sphinx-autobuild
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r docs/requirements-doc.txt
+          pip install .
 
-    - name: Build documentation
-      run: |
-        cd docs
-        sphinx-build -b html . _build/html
+      - name: Build documentation (HTML)
+        run: |
+          cd docs
+          sphinx-build -b html . _build/html
 
-    - name: Upload documentation artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: docs-html
-        path: docs/_build/html
+      - name: Build documentation (linkcheck)
+        run: |
+          cd docs
+          sphinx-build -b linkcheck . _build/linkcheck
+
+      - name: Upload documentation artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs-html
+          path: docs/_build/html
