feat: reduse test warnings
- implement lazy imports for core modules and enhance plot limit handling to ensure finite values

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,4 +6,12 @@ markers =
     slow: marks tests as slow (can be skipped in FAST_TESTS)
     viz: marks visualization tests (optional extras)
 filterwarnings =
-    ignore::DeprecationWarning
+    error::DeprecationWarning
+    error::PendingDeprecationWarning
+    error::FutureWarning
+
+    # Reduce noise from common third-party user warnings (matplotlib/numpy).
+    # These are suppressed temporarily while we address real deprecations.
+    ignore::UserWarning
+    # Intentional deprecation emitted by the library during transition - allow in tests
+    ignore:The legacy module 'calibrated_explanations.core' is deprecated; import from the 'calibrated_explanations.core' package instead.:DeprecationWarning
