Enhance plugin system with interval calibrator support and CLI integration
- Added interval calibrator context and metadata handling in CalibratedExplainer.
- Implemented interval plugin resolution and telemetry tracking.
- Updated documentation to reflect new plugin tooling and configuration options.
- Introduced CLI commands for listing and inspecting plugins.
- Added tests for interval plugin resolution and CLI functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ eval = [
   "seaborn",
 ]
 
+[project.scripts]
+ce.plugins = "calibrated_explanations.plugins.cli:main"
+
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 markers = [
