--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ eval = [
 ]
 
 [project.scripts]
-ce.plugins = "calibrated_explanations.plugins.cli:main"
+"ce.plugins" = "calibrated_explanations.plugins.cli:main"
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
