feat: enhance coverage configuration and add tests for interval calibrators and discretizers

--- a/.coveragerc
+++ b/.coveragerc
@@ -24,6 +24,9 @@ fail_under = 90
 show_missing = True
 skip_covered = False
 precision = 1
+# Patterns we intentionally exclude from coverage accounting because they
+# represent defensive programming or module entry points rather than runtime
+# logic exercised in production. Keep this list short and documented.
 exclude_lines =
     pragma: no cover
     if __name__ == .__main__.
