--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-addopts = -q
+addopts = -q --cov=src/calibrated_explanations --cov-report=term-missing --cov-fail-under=90
 testpaths = tests
 markers =
     slow: marks tests as slow (can be skipped in FAST_TESTS)
