--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,7 @@ tags
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+catboost_info/learn/events.out.tfevents
+catboost_info/catboost_training.json
+catboost_info/learn_error.tsv
+catboost_info/time_left.tsv
