refactor: restructure documentation and enhance telemetry integration
- Adopted a role-based information architecture for documentation, improving navigation and accessibility.
- Moved and updated various documentation sections, including quickstarts, installation guides, and telemetry configuration.
- Enhanced telemetry payloads to capture additional metadata, including preprocessing steps and plugin provenance.
- Introduced new tests to validate documentation navigation and quickstart execution.
- Updated the default plotting backend to PlotSpec, ensuring telemetry coverage for rendering processes.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,12 +26,15 @@ jobs:
       - name: Build documentation (HTML)
         run: |
           cd docs
-          sphinx-build -b html . _build/html
+          sphinx-build -b html -W . _build/html
 
       - name: Build documentation (linkcheck)
         run: |
           cd docs
           sphinx-build -b linkcheck . _build/linkcheck
+
+      - name: Run documentation navigation tests
+        run: pytest tests/docs
 
       - name: Upload documentation artifacts
         uses: actions/upload-artifact@v4
