chore: update coverage configuration and documentation
- Reduced the coverage threshold from 90% to 85% in `.coveragerc` and updated related documentation in `CONTRIBUTING.md` to reflect this change.
- Added a new `codecov.yml` file to enforce coverage requirements for specific paths.
- Updated the `Makefile` and `pytest.ini` to centralize coverage options and ensure consistency with CI behavior.
- Adjusted the GitHub Actions workflow to utilize the new `make test-cov` command for running tests with coverage.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-addopts = -q --cov=src/calibrated_explanations --cov-report=term-missing --cov-fail-under=85
+addopts = -q --cov=src/calibrated_explanations --cov-config=.coveragerc --cov-report=term-missing --cov-report=xml --cov-fail-under=85
 testpaths = tests
 markers =
     slow: marks tests as slow (can be skipped in FAST_TESTS)
