--- a/.coveragerc
+++ b/.coveragerc
@@ -12,6 +12,14 @@ omit =
     scripts/*
     evaluation/*
     setup.py
+    # Exclude viz adapter from coverage due to matplotlib lazy loading conflicts
+    # with pytest-cov instrumentation. See ADR-023 for rationale.
+    src/calibrated_explanations/viz/matplotlib_adapter.py
+    # Exclude legacy compatibility shims - deprecated modules that just re-export
+    src/calibrated_explanations/_interval_regressor.py
+    src/calibrated_explanations/_plots.py
+    src/calibrated_explanations/_plots_legacy.py
+    src/calibrated_explanations/_venn_abers.py
 parallel = False
 
 [paths]
