fix: update plot configuration and enhance unit tests
- Removed redundant comment on the width parameter in `plot_config.ini`.
- Added a new test to ensure the plot configuration file is read and written correctly, validating the functionality of configuration helpers.
- Enhanced the test suite to confirm that updates to the plot configuration are accurately reflected in the configuration file.

--- a/src/calibrated_explanations/utils/configurations/plot_config.ini
+++ b/src/calibrated_explanations/utils/configurations/plot_config.ini
@@ -21,7 +21,7 @@ dpi = 300
 save_dpi = 300
 facecolor = white
 axes_facecolor = white
-width = 10  # Add width parameter with default value
+width = 10
 
 [colors]
 background = #f8f9fa
@@ -32,3 +32,4 @@ positive = red
 negative = blue
 uncertainty = lightgrey
 alpha = 0.2
+
