feat: Introduce external plugins support and enhance documentation
- Added support for external plugins, including a new `external_plugins` directory and a `fast_explanations` module for optimized explanations.
- Updated `pyproject.toml` to include an "external-plugins" install option.
- Enhanced the README and documentation to guide users on installing and using external plugins, including installation commands and registration steps.
- Implemented a denylist feature for plugins, allowing users to block specific identifiers via the `CE_DENY_PLUGIN` environment variable.
- Revised the CLI to reflect the new plugin architecture and provide clear messaging about optional tooling.
- Improved JSON export functionality for explanations, ensuring schema compliance and ease of use.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ eval = [
   "shap",
   "seaborn",
 ]
+"external-plugins" = []
 
 [project.scripts]
 "ce.plugins" = "calibrated_explanations.plugins.cli:main"
@@ -72,7 +73,7 @@ markers = [
 ]
 
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["src", "external_plugins"]
 
 [tool.setuptools.package-data]
 calibrated_explanations = ["py.typed", "schemas/*.json"]
