docs: Enhance README and governance documentation with new features and checks
- Updated the README.md to include a dual quickstart table for classification and regression, and added guidance on using triangular alternatives with `explore_alternatives`.
- Introduced a new `waivers_inventory.md` to track coverage waivers and their statuses, ensuring better governance.
- Revised the release checklist in `release_checklist.md` to include additional documentation and governance tasks, enhancing the release process.
- Added a script `check_required_fragments.py` to validate the presence of essential documentation fragments, improving documentation consistency.
- Updated the scripts README to reflect the new validation script and its purpose.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,6 +23,9 @@ jobs:
           pip install -r docs/requirements-doc.txt
           pip install .
 
+      - name: Enforce shared documentation fragments
+        run: python scripts/check_required_fragments.py
+
       - name: Build documentation (HTML)
         run: |
           cd docs
