docs: Update documentation for version 0.9.0 and enhance telemetry guidance
- Bumped version to 0.9.0 across relevant files, including pyproject.toml and documentation.
- Revised the telemetry documentation, relocating it under governance and clarifying its optional nature for users.
- Improved the contributing guidelines to reflect changes in CI checks and docstring enforcement.
- Updated external plugin installation instructions to include pinned dependencies for compatibility.
- Enhanced various documentation sections for clarity, including installation and troubleshooting guides, ensuring users are directed to the latest resources.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "calibrated_explanations"
-version = "0.8.0"
+version = "0.9.0"
 authors = [
   { name="Helena Löfström", email="helena.lofstrom@ju.se" },
   { name="Tuwe Löfström", email="tuwe.lofstrom@ju.se" },
@@ -61,7 +61,11 @@ eval = [
   "shap",
   "seaborn",
 ]
-"external-plugins" = []
+"external-plugins" = [
+  "numpy>=1.24",
+  "pandas>=2.0",
+  "scikit-learn>=1.3",
+]
 
 [project.scripts]
 "ce.plugins" = "calibrated_explanations.plugins.cli:main"
