docs: Enhance CI and documentation standards for v0.9.0
- Updated the lint workflow to enforce a minimum docstring coverage of 94% and integrated notebook linting, ensuring compliance with ADR-018.
- Extended the shared documentation fragment checker to enforce the placement of optional extras, aligning with ADR-012's guidelines.
- Authored the v0.9.0 release notes, emphasizing optional telemetry/plugin extras and linking to the release plan for governance sign-off.
- Added a regression test for the `external-plugins` extra to verify the correct installation of curated dependencies, maintaining user expectations for optional installs.
- Reorganized documentation to improve clarity and navigation, ensuring users are directed to the latest resources and guidelines.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,9 +22,12 @@ jobs:
       - name: Ruff naming warnings (ADR-017)
         run: |
           ruff check --select N --exit-zero
+      - name: Notebook lint (ADR-018 notebooks)
+        run: |
+          nbqa ruff notebooks
       - name: pydocstyle (ADR-018 baseline)
         run: |
           pydocstyle src tests
       - name: Docstring coverage report
         run: |
-          python scripts/check_docstring_coverage.py
+          python scripts/check_docstring_coverage.py --fail-under 94.0
