--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dev = [
   "mypy",
   "jsonschema",
   "pydocstyle",
+  "nbqa",
 ]
 eval = [
   "shap",
@@ -88,7 +89,7 @@ calibrated_explanations = ["py.typed", "schemas/*.json"]
 [tool.ruff]
 target-version = "py38"
 line-length = 100
-extend-exclude = ["build", "dist", "benchmarks", "docs/_build", "notebooks", "scripts", "evaluation"]
+extend-exclude = ["build", "dist", "benchmarks", "docs/_build", "scripts", "evaluation"]
 
 [tool.ruff.lint]
 select = [
