chore: v0.9.0 tasks 8 and 9 addressed
- Deleted legacy modules: `_interval_regressor.py`, `_plots.py`, `_plots_legacy.py`, and `_venn_abers.py` to streamline the codebase and eliminate deprecated functionality.
- Updated `codecov.yml` to remove references to deleted files, ensuring accurate coverage reporting.
- Adjusted docstring coverage badge in `README.md` to reflect the latest coverage report.
- Enhanced linting workflow to improve naming enforcement and notebook linting consistency.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,12 +19,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install .[dev]
-      - name: Ruff naming warnings (ADR-017)
+      - name: Ruff naming enforcement (ADR-017)
         run: |
-          ruff check --select N --exit-zero
-      - name: Notebook lint (ADR-018 notebooks)
+          ruff check --select N
+      - name: Notebook naming lint (ADR-018 notebooks)
         run: |
-          nbqa ruff notebooks
+          python -m nbqa ruff --select N notebooks
       - name: pydocstyle (ADR-018 baseline)
         run: |
           pydocstyle src tests
