fix(lint): Correct notebook linting command syntax in GitHub Actions workflow
- Updated the command in the lint.yml file to ensure proper execution of the nbqa ruff linting for notebooks, changing the order of arguments for correct functionality.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
           ruff check --select N
       - name: Notebook naming lint (ADR-018 notebooks)
         run: |
-          python -m nbqa ruff --select N notebooks
+          python -m nbqa ruff notebooks --select N
       - name: pydocstyle (ADR-018 baseline)
         run: |
           pydocstyle src tests
